[brown] 실행하면서 오류 수정 중